<resources>
    <string name="auth">authentication</string>
    <string name="filter_signup">signup</string>
    <string name="filter_callback">callback</string>
    <string name="filter_activation">activation</string>
    <string name="filter_error">error</string>
    <string name="filter_forgotPassword">forgotPassword</string>
    <string name="filter_privacy">privacy</string>
    <string name="filter_terms">terms</string>
    <string name="userid">UserId</string>
    <string name="verified">Verified</string>
    <string name="join">Join</string>
    <string name="studyId">studyId</string>
    <string name="ok">OK</string>
    <string name="ok_2">Ok</string>
    <string name="app_stage">development</string>
    <string name="signup">SIGN UP</string>
    <string name="cancel">Cancel</string>
    <string name="first_name">First Name</string>
    <string name="first_name_2">First name</string>
    <string name="account_deletion">Your account has been deleted.</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_2">Last name</string>
    <string name="email_id">Email</string>
    <string name="username">Username</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_old_password">Enter current password</string>
    <string name="enter_temp_password">Enter temporary password</string>
    <string name="password">Password</string>
    <string name="passcode">Passcode</string>
    <string name="enter_password">Enter password</string>
    <string name="add_password">Add password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="subject">Subject</string>
    <string name="enter_subject">Enter subject</string>
    <string name="message">Message</string>
    <string name="enter_feedback">Enter your feedback here</string>
    <string name="contact_us">CONTACT US</string>
    <string name="feedback">LEAVE US YOUR FEEDBACK</string>
    <string name="feedback_text">We\'d love to hear from you! Please share your thoughts on how we can improve your experience of participating in health studies and contributing to a healthier world! Your feedback will be anonymous.</string>
    <string name="enter_confirm_password">Confirm password</string>
    <string name="enter_contact_us">Please let us know what you need help with. We will get back to you at the earliest.</string>
    <string name="agree">I Agree to the Terms and Privacy Policy</string>
    <string name="submit">Submit</string>
    <string name="verification_step">Verification Step</string>
    <string name="tap_below_txt">Once done, tap on the \n button below.</string>
    <string name="continue_txt">Continue</string>
    <string name="verification_code">Enter verification code</string>
    <string name="verification_email">Enter email address</string>
    <string name="resend">Resend verification code</string>
    <string name="congrats_txt">Congrats!</string>
    <string name="survey_completed">Activity completed</string>
    <string name="signup_process_complete">Thank you for registering. Your app account is now set up and ready to use.</string>
    <string name="next">Next</string>
    <string name="setup_passcode">Create passcode</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="usr_pwd">with username and\n password</string>
    <string name="email">Email</string>
    <string name="new_password">New password</string>
    <string name="old_pasword">Current password</string>
    <string name="temp_password">Temporary password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_usr_signup">New user? Sign up</string>
    <string name="use_touch_id">Use Touch ID</string>
    <string name="or">OR</string>
    <string name="passcode_to_access_app">Enter passcode to\n access the app</string>
    <string name="notifictions">NOTIFICATIONS</string>
    <string name="resources">RESOURCES</string>
    <string name="reachout">REACH OUT</string>
    <string name="profile">MY ACCOUNT</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change password</string>
    <string name="change_passcode">Change passcode</string>
    <string name="use_passcode_txt">Use passcode to access app</string>
    <string name="touch_txt">Use Touch ID to access app</string>
    <string name="receive_push_notifctn">Receive push notifications?</string>
    <string name="recv_stdy_actrem">Receive study activity reminders?</string>
    <string name="reminder">Set up lead time for study activity reminders</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_my_account">Delete app account</string>
    <string name="update">Update</string>
    <string name="get_started">Get started</string>
    <string name="gateway_welcome">Welcome!</string>
    <string name="gateway_welcome1">Leveraging the power of mobility for research</string>
    <string name="gateway_welcome2">Improving health outcomes</string>
    <string name="gateway_welcome3">Protecting your privacy</string>
    <string name="gateway_des2">Explore and participate in studies for which you are eligible and help generate more data, better insights and improved outcomes.</string>
    <string name="gateway_des3">Additional app overview content can go here</string>
    <string name="new_user">New user?</string>
    <string name="dashboard_label">Dashboard</string>
    <string name="activities_label">Activities</string>
    <string name="resources_label">Resources</string>
    <string name="study_activities">STUDY ACTIVITIES</string>
    <string name="forgot_password_heading">PASSWORD HELP</string>
    <string name="forgot_password_text">Please enter your registered email to receive password help.</string>
    <string name="change_password_heading">CHANGE PASSWORD</string>
    <string name="change_password_heading1">CREATE PASSWORD</string>
    <string name="change_password_heading2">SET UP PASSWORD</string>
    <string name="watch_video">Watch video</string>
    <string name="learn_more">Learn more</string>
    <string name="profile_small">My account</string>
    <string name="terms">TERMS</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="privacy_policy_content">Placeholder content</string>
    <string name="response_retained">Response data will be retained</string>
    <string name="study_pregnant_women">A study for pregnant women</string>
    <string name="response_deleted">Response data will be deleted</string>
    <string name="delete_my_data">Delete my data</string>
    <string name="retain_my_data">Retain my data</string>
    <string name="agree_deleting_my_account">I agree, proceed to deleting my app account</string>
    <string name="do_not_wish_to_delete_my_account">I do not wish to delete my account</string>
    <string name="confirmation">CONFIRMATION</string>
    <string name="side_menu_home">Home</string>
    <string name="side_menu_resources">Resources</string>
    <string name="side_menu_reach_out">Reach out</string>
    <string name="side_menu_sign_in">Sign in</string>
    <string name="side_menu_new_user">New user?</string>
    <string name="side_menu_sign_up">Sign up</string>
    <string name="side_menu_sign_out">Sign out</string>
    <string name="side_menu_version">v</string>
    <string name="survey">Survey</string>
    <string name="no_study">Sorry, no studies available right now. Please remain signed in to get notified when there are new studies available.</string>
    <string name="enter_enrollmentid">Enter enrollment token</string>
    <string name="enrollmentdesc">This study allows only pre-screened participants to join the study. If you are one, please enter the enrollment token provided to you for this study.</string>
    <string name="reviewconformmsg">By tapping on Agree, you confirm that you have reviewed the consent document and agree to participate in the study.</string>
    <string name="reviewmsg">Review the form below, and tap agree if you are ready to continue</string>
    <string name="review">Review</string>
    <string name="verification_email_content1">An email has been sent to</string>
    <string name="verification_email_content2">. Please type in the verification code received in the email to complete the verification step.</string>
    <string name="verification_email_signin">Your account is pending verification. Please type in the verification code received in email to complete this step and use the app.</string>
    <string name="verification_email_forgotpassword">Your account</string>
    <string name="verification_email_forgotpassword1"> is pending verification. Enter the verification code sent to your registered email to complete this step and try requesting password help again. </string>
    <string name="email_empty">Please enter your email address</string>
    <string name="password_empty">Please enter your password</string>
    <string name="password_new_empty">Please enter your new password</string>
    <string name="password_old_empty">Please enter your current password</string>
    <string name="confirm_password_empty">Please confirm the password</string>
    <string name="enter_all_field_empty">Please fill in all the required fields</string>
    <string name="password_mismatch_validation">Passwords do not match</string>
    <string name="email_validation">Please enter a valid email</string>
    <string name="validation_code_error">Please enter the verification code</string>
    <string name="terms_and_condition_validation">You must review and accept the terms and conditions to continue</string>
    <string name="password_validation">Your password must be at least 8 characters long and contain lower case and upper case letters, and numeric and special characters.</string>
    <string name="signout_message">Are you sure you want to sign out ?</string>
    <string name="password_same_error">Old and new passwords should not be the same</string>
    <string name="password_mismatch_error">Passwords do not match</string>
    <string name="password_mismatch_error1">Passwords do not match</string>
    <string name="password_change_message">Your password has been changed successfully</string>
    <string name="password_change_message_signin">Your password has been changed successfully. Please sign in again.</string>
    <string name="email_verification">An email verification link has been sent to your registered email.</string>
    <string name="verify_email">Please verify your email address.</string>
    <string name="enrollvalidated">Your eligibility to participate in this study has been successfully verified. You may proceed to the next steps.</string>
    <string name="completed">Completed</string>
    <string name="not_eligible">Not eligible</string>
    <string name="in_progress">Enrolled</string>
    <string name="yet_to_join_filter">Yet to enroll</string>
    <string name="withdrawn">Withdrawn</string>
    <string name="done">Done</string>
    <string name="thank_you_for_your_time">Thank you for your time</string>
    <string name="apply">Apply</string>
    <string name="allstudies">Study Status</string>
    <string name="paused_first_cap">Paused</string>
    <string name="active_caps">Active</string>
    <string name="closed_caps">Closed</string>
    <string name="participation_status_small">Participation status</string>
    <string name="surveycompletedmsg">Tap on \'Done\' to submit your responses. Responses cannot be modified after submission.</string>
    <string name="validated">Eligibility confirmed</string>
</resources>